Fixed scrollbar business.

--- a/HTResearch/WebClient/WebClient/static/css/index/index.css
+++ b/HTResearch/WebClient/WebClient/static/css/index/index.css
@@ -199,6 +199,18 @@
 #news-carousel .article-content {
   display: none;
 }
+#search-results-div ::-webkit-scrollbar {
+  width: 12px;
+}
+#search-results-div ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background: #fff;
+}
+#search-results-div ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
 #search-results-div {
   position: relative;
   overflow: hidden;
@@ -231,7 +243,7 @@
    get covered.
 */
 #search-results-div .panel-heading[style~="position:"] {
-  width: 95%;
+  width: calc(100% - 1.1em);
 }
 #search-box {
   line-height: 2;
