--- a/HTResearch/WebClient/WebClient/static/less/index/searchquery.less
+++ b/HTResearch/WebClient/WebClient/static/less/index/searchquery.less
@@ -1,3 +1,18 @@
+#search-results-div ::-webkit-scrollbar {
+  width: 12px;
+}
+
+#search-results-div ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background: #fff;
+}
+
+#search-results-div ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
 #search-results-div {
     position: relative;
     overflow: hidden;
@@ -35,7 +50,7 @@
    get covered.
 */
 #search-results-div .panel-heading[style~="position:"] {
-  width: 95%;
+  width: ~"calc(100% - 1.1em)";
 }
 
 #search-box {
